# ozb

./: .gitignore  Cargo.toml  Dockerfile  README.md  application.yaml  build.rs  docker-compose.yaml  docker-compose.yml  shell.nix
.github/workflows/: build-deploy.yml  cleanup-old-images.yml  deploy.yml  pr-build.yaml
.sqlx/: query-01f1c59b9eec180f456597ac84f55f0120428e185033af81454cd96222181f1a.json  query-244943b89a4c99a486f54e840750ee90f2f72cd51fcf28960f09b0ac768e7540.json  query-3aa3b4f3212181fa53787a3ab4d0368377c62568d5c1512b506f3d6dd8c3bd9f.json  query-3cd0e55f137a171f78c0d03cacbe35e10398c094cacdf2d902717289fd6d36cf.json  query-3fd46c151477894e49eccb64fbbc52f0fe72f3743611f593499d39e9a5f10842.json  query-54e831ad1ff4aa70639868de66405c6457831c03dc1f6a87449ae1aa92c4a409.json  query-5d83eaaa3ce7e424a119a9776d687e724eb32e235b6684d80cb86bda89fd863d.json  query-6893e515bc7a864f01ecb34128ed9863be886badcd16cdf49c2d7ae83b96e7c0.json  query-70769577364ac8cba3cb3d5b0846ec37c92e1a332ed0a3196952b5e3444a766a.json  query-7085e771133f2effb16e208a55ea67128714b793d92ad4158162e4023031626d.json  query-7840b910f19ff1581d0e699b934a5e26f46d560c2069aa9a18c4552a2432e4c8.json  query-8353788fd28892577d5e4b171e10790a23c3482e320924d0e1de1332e1f279ad.json  query-88e451dbe555e81cead1a87f83ce1e72a69b9e96e32ce493946cdc454bda599e.json  query-927e8300ccbbcc0da917065248946777d6ec13d23e9509219330c926e8599fc3.json  query-a3c00f57febde5fdd96e5be4d3d5a28fd41598756dfbb68fdd6e5b7da1b31951.json  query-b1ef0dda3793cd1e055e18938095428d46732e0899b0af607373f01f78545e1f.json  query-bdeb5ffc06d3fdf560f82aa714229a979e5dbd65960b60c23d8f0cb9c7a82109.json  query-c16bdc6292fb43949e6841218f912d6fafbe0501f75b36a3209c3d277f96393d.json  query-d8e642e887257f81772034d708d5445af266af137f4cd12769b9209d4e10a5cc.json  query-df54f8833bd5c4a5fb6f10ba334a16d675a092a3387882339b08f5bfa2c8ad0f.json  query-f3f4fe01ac9438930221e55e8b970c878e6f31d5c99a9da30913228f5d3df34a.json  query-f91cbec2e27d4cf2101d022bc31fb3f98c884f1857521bfe4c019ca4db68aac1.json
kubernetes/: deployment.yaml  discord-bot.deployment.yaml  finder.deployment.yaml  kustomization.yaml  namespace.yaml  secret.yaml  trigger.deployment.yaml
migrations/: 20240611101525_init.sql  20240613092510_registered-keywords.sql  20240614120316_add-audit.sql  20250317050446_add_computer_component_category.sql
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: config.rs  constants.rs  http.rs  lib.rs  log.rs  macro.rs  ozbargain.rs  source.rs  tracing.rs  types.rs
