[package]
name = "ozb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.95"
rss = "2.0.11"
reqwest = { version = "0.12.9", features = ["json"] }
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
byteorder = "1.5.0"
tl = "0.7.8"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
state = "0.6.0"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-standby = "0.16.0"
uuid = { version = "1.11.0", features = ["v4"] }
vesper = "0.13.0"
mongodb = "3.1.1"
serde = "1.0.216"

[[bin]]
name = "ozb-finder"
path = "src/bin/ozb_finder.rs"

[[bin]]
name = "ozb-discord-bot"
path = "src/bin/ozb_discord_bot.rs"

[[bin]]
name = "ozb-trigger"
path = "src/bin/ozb_trigger.rs"

[[bin]]
name = "ozb-migration"
path = "src/bin/ozb_migration.rs"
